--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
  <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>BeePort</title>
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
  </head>
@@ -8,12 +9,12 @@
    <div class="container-fluid">
      <header>
        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-	 <a class="navbar-brand" href="{% url 'stock_start' %}">Django Superkraft</a>
+	 <a class="navbar-brand" href="{% url 'stock_start' %}">Beeport alpha</a>
        </nav>
      </header>
-     <div class="jumbotron">
-	<h1>Ein CRUD-Projekt in 60 Minuten</h1>
-	<h2>Eine einfache Adressbuch-App</h2>
+     <div class="jumbotron-fluid">
+	<!--<h1>Ein CRUD-Projekt in 60 Minuten</h1>
+	<h2>Eine einfache Adressbuch-App</h2>-->
      </div>
      {% block content %}													     {% endblock content %}
    </div>
