--- a/stoecke/templates/stoecke/stock_home.html
+++ b/stoecke/templates/stoecke/stock_home.html
@@ -6,9 +6,9 @@
 <h2>Alle Bienenstoecke</h2>
 <ul>
 	    {% for stock in object_list %}
-	        <li><a href="#">{{ stock.name }} {{ stock.id }}</a></li>
+	    <li><a href="{% url 'stock_entries' stock.pk %}">{{stock.id}} - {{ stock.name }}</a></li>
 		    {% endfor %}
 </ul>
-<a class="btn btn-success btn-sm" href="#">+ Neuen Stock hinzufügen</a>
+<a class="btn btn-success btn-sm" href="{% url 'new_stock' %}">+ Neuen Stock hinzufügen</a>
 {% endblock content %}
 
